// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Menu Item update should fail with circular dependency when folderId equals id (self-reference) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "CIRCULAR_DEPENDENCY",
              "message": "Navigation menu item cannot be its own parent",
              "userFriendlyMessage": "Navigation menu item cannot be its own parent",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "Standalone Folder",
            "type": "FOLDER",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Navigation menu item cannot be its own parent",
  },
  "message": "Multiple validation errors occurred while updating navigation menu items",
  "name": "GraphQLError",
}
`;

exports[`Navigation Menu Item update should fail with circular dependency when update creates a circular dependency chain 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "CIRCULAR_DEPENDENCY",
              "message": "Circular dependency detected in navigation menu item hierarchy",
              "userFriendlyMessage": "Circular dependency detected in navigation menu item hierarchy",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "Parent Folder",
            "type": "FOLDER",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Circular dependency detected in navigation menu item hierarchy",
  },
  "message": "Multiple validation errors occurred while updating navigation menu items",
  "name": "GraphQLError",
}
`;
